Dark mode bold fonts bug fixed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -177,6 +177,7 @@
 }
 
 .card__text {
+  font-variation-settings: var(--regularFont);
   font-size: 18px;
   line-height: 117%;
 }
